--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ osbourne-explorer/.DS_Store
 osbourne-explorer.xcodeproj/project.xcworkspace/xcuserdata/*
 osbourne-explorer.xcodeproj/project.xcworkspace/xcshareddata/*
 osbourne-explorer.xcodeproj/xcuserdata/
+osbourne-explorer.xcworkspace/xcuserdata/
